--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "nodemailer": "^6.9.14",
-    "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "stripe": "^16.9.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
